[tool.poetry]
name = "mini-rag-system"
version = "0.1.0"
description = "Minimal example on how to build a RAG system with ollama and langchain"
authors = ["Hendrik Belitz <hendrik@hendrikbelitz.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.12"
langchain-core = "^0.3.25"
langchain-community = "^0.3.12"
chromadb = "^0.5.23"
ollama = "^0.4.4"
PyPDF2 = "^3.0.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
langchain-chroma = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.12.0"
flake8 = "^7.1.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
